--- a/index.html
+++ b/index.html
@@ -31,12 +31,20 @@
               <input type="text"  class="form-control" id="new-phone-number" name="new-phone-number">
             </div>
             <div class="form-group">
-              <label for="new-last-name">Email</label>
-              <input type="email"  class="form-control" id="new-email" name="new-email">
+              <label for="new-work-email">Work Email</label>
+              <input type="text"  class="form-control" id="new-work-email">
             </div>
             <div class="form-group">
-              <label for="new-phone-number">Address</label>
-              <input type="text"  class="form-control" id="new-address" name="new-address">
+              <label for="new-personal-email">Personal Email</label>
+              <input type="text"  class="form-control" id="new-personal-email">
+            </div>
+            <div class="form-group">
+              <label for="new-home-address">home address</label>
+              <input type="text"  class="form-control" id="new-home-address">
+            </div>
+            <div class="form-group">
+              <label for="new-work-address">work address</label>
+              <input type="text"  class="form-control" id="new-work-address">
             </div>
  <!-- Address Input Fields -->
  <!-- <div class="row section">
@@ -116,8 +124,10 @@
             <p>First Name: <span class="first-name"></span></p>
             <p>Last Name: <span class="last-name"></span></p>
             <p>Phone Number: <span class="phone-number"></span></p>
-            <p>Email: <span class="email"></span></p>
-            <p>Address: <span class="address"></span></p>
+            <p id='work-email-id'>Work Email: <span class="work-email"></span></p>
+            <p id="personal-email-id">Personal Email: <span class="personal-email"></span></p>
+            <p id="home-address-id">Home Address: <span class="home-address"></span></p>
+            <p id="work-address-id">Work Address: <span class="work-address"></span></p>
             <button class="btn-primary delete" type="button">Delete</button>
           </div>
         </div>
