function with address object

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           </form>
           <hr>
           <h2>Contacts:</h2>
-          <div id="contacts">
+          <div id="contacts"><div id="addresses"></div>
           </div>
         </div>
         <div class="col-md-6">
